--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.27.5"
   },
   "dependencies": {
     "sass": "^1.62.1"
