--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   },
   "rules": {
     "linebreak-style": ["error", "windows"],
-    "import/extensions": 0
+    "import/extensions": 0,
+    "import/prefer-default-export": "off"
   }
 }
