--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,6 @@
     "ecmaVersion": "latest"
   },
   "rules": {
-    "linebreak-style": ["error", "windows"],
-    "import/extensions": 0,
-    "import/prefer-default-export": "off"
+    "import/extensions": 0
   }
 }
